--- a/data/index.html
+++ b/data/index.html
@@ -70,6 +70,9 @@
         data: []
       }
     ],
+    legend: {
+      enabled: true
+    },
     plotOptions: {
       spline: {
         animation: true,
@@ -127,6 +130,9 @@
         data: []
       }
     ],
+    legend: {
+      enabled: true
+    },
     plotOptions: {
       spline: {
         animation: true,
@@ -184,6 +190,9 @@
         data: []
       }
     ],
+    legend: {
+      enabled: true
+    },
     plotOptions: {
       spline: {
         animation: true,
@@ -239,7 +248,7 @@
     };
     xhttp.open("GET", "/imu", true);
     xhttp.send();
-  }, 500);
+  }, 100);
 </script>
 
 </html>
